classDiagram
    %% Core Domain Models
    class GitHubRepository {
        +Guid Id
        +string Owner
        +string Name
        +string CloneUrl
        +DateTime LastAnalyzedCommitDate
        +string GetFullName()
        +string GetLocalPath()
    }

    class CommitLineCount {
        +Guid Id
        +Guid RepositoryId
        +string CommitSha
        +DateTime CommitDate
        +int TotalLines
        +int LinesAdded
        +int LinesRemoved
        +Dictionary~string, int~ LinesByFileType
        +int GetNetLines()
        +bool HasFileType(string extension)
    }

    %% Application DTOs
    class CommitStatsDto {
        +string Sha
        +DateTime CommitDate
        +int TotalLines
        +int LinesAdded
        +int LinesRemoved
        +Dictionary~string, int~ LinesByFileType
        +string CommitMessage
        +string AuthorName
        +string AuthorEmail
    }

    class DailyLineCountDto {
        +DateTime Date
        +int TotalLines
        +int LinesAdded
        +int LinesRemoved
        +int NetLines
        +int CommitCount
        +Dictionary~string, int~ LinesByFileType
    }

    class GitHubRepoStatsDto {
        +GitHubRepository Repository
        +int CommitCount
        +List~CommitLineCount~ CommitLineCounts
        +Dictionary~string, int~ LineCounts
        +int GetTotalLinesOfCode()
        +DateTime GetLastCommitDate()
    }

    class RepositoryLineCountHistoryDto {
        +Guid RepositoryId
        +string RepositoryName
        +string Owner
        +IEnumerable~DailyLineCountDto~ DailyLineCounts
        +string GetFullRepositoryName()
        +int GetTotalDays()
    }

    %% Service Interfaces
    class IGitHubService {
        <<interface>>
        +Task~string~ CloneRepositoryAsync(string, string)
        +Task~IEnumerable~CommitStatsDto~~ GetCommitStatsAsync(string, DateTime?)
        +Task~Dictionary~string, int~~ CountLinesInCommitAsync(string, string, IEnumerable~string~)
        +Task CheckConnectionAsync()
    }

    class IRepositoryDataService {
        <<interface>>
        +Task AddRepositoryAsync(GitHubRepository)
        +Task~GitHubRepository?~ GetRepositoryByIdAsync(Guid)
        +Task~IEnumerable~GitHubRepository~~ GetAllRepositoriesAsync()
        +Task AddCommitLineCountAsync(CommitLineCount)
        +Task~IEnumerable~CommitLineCount~~ GetCommitLineCountsByRepositoryIdAsync(Guid)
        +Task~bool~ CommitExistsAsync(Guid, string)
        +Task CheckConnectionAsync()
    }

    class IRepositoryService {
        <<interface>>
        +Task~IEnumerable~GitHubRepository~~ GetAllRepositoriesAsync()
        +Task~GitHubRepository~ AddRepositoryAsync(string, string, string)
        +Task AnalyzeRepositoryCommitsAsync(Guid)
        +Task~IEnumerable~CommitLineCount~~ GetLineCountsForRepositoryAsync(Guid)
        +Task~IEnumerable~DailyLineCountDto~~ GetLineCountHistoryAsync(Guid, int)
        +Task~IEnumerable~string~~ GetConfiguredFileExtensionsAsync()
    }

    %% Relationships
    GitHubRepository "1" --> "*" CommitLineCount
    GitHubRepository "1" --> "1" GitHubRepoStatsDto
    CommitLineCount "1" --> "1" CommitStatsDto
    RepositoryLineCountHistoryDto "1" --> "*" DailyLineCountDto
    
    %% Service Dependencies
    IGitHubService --> CommitStatsDto
    IGitHubService --> GitHubRepository
    IRepositoryDataService --> GitHubRepository
    IRepositoryDataService --> CommitLineCount
    IRepositoryService --> GitHubRepository
    IRepositoryService --> CommitLineCount
    IRepositoryService --> DailyLineCountDto
    IRepositoryService --> GitHubRepoStatsDto
    IRepositoryService --> RepositoryLineCountHistoryDto
